# search-system-sandbox

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
converter/: converter.py
converter/data/: koukyoushisetsu.csv
search-system/: package.json
search-system/components/: PublicFacilityCard.tsx  SearchForm.tsx  SearchResult.tsx
search-system/pages/: index.tsx
search-system/pages/api/elasticsearch/: index.ts
search-system/pages/api/public_facility/: index.ts
