[tool.poetry]
name = "search-system-sandbox"
version = "0.1.0"
description = ""
authors = ["yuta4030 <hal4030@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
opensearch = {git = "https://github.com/opensearch-project/opensearch-py.git", rev = "main"}

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
